removed foward slash from other files

--- a/index.html
+++ b/index.html
@@ -9,8 +9,6 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Festive&display=swap" rel="stylesheet">
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Festive&family=Yellowtail&display=swap" rel="stylesheet">
 
     <!-- Add icon library -->
@@ -61,7 +59,7 @@
     <!-- Jumbotron with background image -->
    
   
-    <div class="jumbotron pl-0 pr-0 pt-0 pb-0 mb-0 ml-0 mr-0" style="height: 100vh; background-image: url(/images/stack2.jpg); background-size: cover;">
+    <div class="jumbotron pl-0 pr-0 pt-0 pb-0 mb-0 ml-0 mr-0" style="height: 100vh; background-image: url(images/stack2.jpg); background-size: cover;">
       
         <div class = "row align-items-center" style = "height: 100vh;">
           <div class = "col-12 text-center mb-0 pb-0">
@@ -99,7 +97,7 @@
     
     <div class ="row pt-4 justify-content-center ml-0 mr-0 cream adjusted" id="aboutus">
         <div class ="col-sm-12 col-md-6 pl-0 pr-0">  
-          <img src="/images/couplepic2.jpg" class="d-block w-100" style="height:20rem" alt="...">
+          <img src="images/couplepic2.jpg" class="d-block w-100" style="height:20rem" alt="...">
         </div>
         <div class = "col-sm-12 col-md-6 align-self-center">
             <h2 class = "mt-3 cursive text-center">A little about us</h2>
@@ -267,30 +265,30 @@
   </div>
   <div class = "row ml-0 mr-0">
     <div class = "col-md-3 col-sm-12 pt-2">
-      <img src="/images/display.png" class="d-block w-100" style="height:15rem" alt="...">
+      <img src="images/display.png" class="d-block w-100" style="height:15rem" alt="...">
     </div>
     <div class = "col-md-3 col-sm-12 pt-2">
-      <img src="/images/drinks.png" class="d-block w-100" style="height:15rem" alt="...">
+      <img src="images/drinks.png" class="d-block w-100" style="height:15rem" alt="...">
     </div>
     <div class = "col-md-3 col-sm-12 pt-2">
-      <img src="/images/glove.png" class="d-block w-100" style="height:15rem" alt="...">
+      <img src="images/glove.png" class="d-block w-100" style="height:15rem" alt="...">
     </div>
     <div class = "col-md-3 col-sm-12 pt-2">
-      <img src="/images/popup.png" class="d-block w-100" style="height:15rem" alt="...">
+      <img src="images/popup.png" class="d-block w-100" style="height:15rem" alt="...">
     </div>
   </div>
   <div class = "row ml-0 mr-0 mt-3">
     <div class = "col-md-3 pt-2 d-none d-md-block">
-      <img src="/images/setup.png" class="d-block w-100" style="height:15rem" alt="...">
+      <img src="images/setup.png" class="d-block w-100" style="height:15rem" alt="...">
     </div>
     <div class = "col-md-3 pt-2 d-none d-md-block">
-      <img src="/images/tacoswide.jpg" class="d-block w-100" style="height:15rem" alt="...">
+      <img src="images/tacoswide.jpg" class="d-block w-100" style="height:15rem" alt="...">
     </div>
     <div class = "col-md-3 pt-2 d-none d-md-block">
-      <img src="/images/green.jpg" class="d-block w-100" style="height:15rem" alt="...">
+      <img src="images/green.jpg" class="d-block w-100" style="height:15rem" alt="...">
     </div>
     <div class = "col-md-3 pt-2 d-none d-md-block">
-      <img src="/images/window.png" class="d-block w-100" style="height:15rem" alt="...">
+      <img src="images/window.png" class="d-block w-100" style="height:15rem" alt="...">
     </div>
   </div>
 
@@ -375,6 +373,6 @@
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-    <script src="/js/index.js"></script>
+    <script src="js/index.js"></script>
 </body>
 </html>
