changing file names. github pages is case sensative

--- a/index.html
+++ b/index.html
@@ -265,16 +265,16 @@
   </div>
   <div class = "row ml-0 mr-0">
     <div class = "col-md-3 col-sm-12 pt-2">
-      <img src="images/display.png" class="d-block w-100" style="height:15rem" alt="...">
+      <img src="images/display.PNG" class="d-block w-100" style="height:15rem" alt="...">
     </div>
     <div class = "col-md-3 col-sm-12 pt-2">
-      <img src="images/drinks.png" class="d-block w-100" style="height:15rem" alt="...">
+      <img src="images/drinks.PNG" class="d-block w-100" style="height:15rem" alt="...">
     </div>
     <div class = "col-md-3 col-sm-12 pt-2">
-      <img src="images/glove.png" class="d-block w-100" style="height:15rem" alt="...">
+      <img src="images/glove.PNG" class="d-block w-100" style="height:15rem" alt="...">
     </div>
     <div class = "col-md-3 col-sm-12 pt-2">
-      <img src="images/popup.png" class="d-block w-100" style="height:15rem" alt="...">
+      <img src="images/popup.PNG" class="d-block w-100" style="height:15rem" alt="...">
     </div>
   </div>
   <div class = "row ml-0 mr-0 mt-3">
