changed name of other files

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     <!-- Jumbotron with background image -->
    
   
-    <div class="jumbotron pl-0 pr-0 pt-0 pb-0 mb-0 ml-0 mr-0" style="height: 100vh; background-image: url(images/stack2.jpg); background-size: cover;">
+    <div class="jumbotron pl-0 pr-0 pt-0 pb-0 mb-0 ml-0 mr-0" style="height: 100vh; background-image: url(images/stack2.JPG); background-size: cover;">
       
         <div class = "row align-items-center" style = "height: 100vh;">
           <div class = "col-12 text-center mb-0 pb-0">
@@ -97,7 +97,7 @@
     
     <div class ="row pt-4 justify-content-center ml-0 mr-0 cream adjusted" id="aboutus">
         <div class ="col-sm-12 col-md-6 pl-0 pr-0">  
-          <img src="images/couplepic2.jpg" class="d-block w-100" style="height:20rem" alt="...">
+          <img src="images/couplepic2.JPG" class="d-block w-100" style="height:20rem" alt="...">
         </div>
         <div class = "col-sm-12 col-md-6 align-self-center">
             <h2 class = "mt-3 cursive text-center">A little about us</h2>
@@ -279,16 +279,16 @@
   </div>
   <div class = "row ml-0 mr-0 mt-3">
     <div class = "col-md-3 pt-2 d-none d-md-block">
-      <img src="images/setup.png" class="d-block w-100" style="height:15rem" alt="...">
+      <img src="images/setup.PNG" class="d-block w-100" style="height:15rem" alt="...">
     </div>
     <div class = "col-md-3 pt-2 d-none d-md-block">
-      <img src="images/tacoswide.jpg" class="d-block w-100" style="height:15rem" alt="...">
+      <img src="images/tacoswide.JPG" class="d-block w-100" style="height:15rem" alt="...">
     </div>
     <div class = "col-md-3 pt-2 d-none d-md-block">
-      <img src="images/green.jpg" class="d-block w-100" style="height:15rem" alt="...">
+      <img src="images/green.JPG" class="d-block w-100" style="height:15rem" alt="...">
     </div>
     <div class = "col-md-3 pt-2 d-none d-md-block">
-      <img src="images/window.png" class="d-block w-100" style="height:15rem" alt="...">
+      <img src="images/window.PNG" class="d-block w-100" style="height:15rem" alt="...">
     </div>
   </div>
 
