changing remaining file names

--- a/thanks.html
+++ b/thanks.html
@@ -19,7 +19,7 @@
 </head>
 <body>
   
-    <div class="jumbotron bg-offwhite mt-0 mb-0" style = "height:100vh">
+    <div class="jumbotron bg-offwhite mt-0 mb-0" style = "height:100vh" id="jumbotron">
         <h1 class="display-4">Thank you!</h1>
         <p class="lead">We will reach out to with within 24 hours to confirm your event. Feel free to check out our social media in the mean time.</p>
         <hr>
