--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Festive&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Festive&family=Yellowtail&display=swap" rel="stylesheet">
 
     <!-- Add icon library -->
@@ -146,7 +148,7 @@
             </div>
           </div>
 
-          <
+          
       </div>
       
           <!---------------------------------------- Our Delicious Menu----------------------------------------->
