changed background and made h1's cursive

--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
               <div class = "card-body">
                 <div class = "row ml-0 mr-0">
                   <div class="col-12 text-center">
-                    <h1> Book an Event</h1>
+                    <h1 class = "cursive"> Book an Event</h1>
                     <p>Whether you're looking to book us for your next event or just looking to price check, go ahead and fill out the form below. We will contact you within a business day.</p>
                   </div>
                   <div class = "col-lg-4 col-sm-12 mt-3">
@@ -263,9 +263,9 @@
         </div>
 
 <!-- -----------------------------------------Some photos of our events --------------------------------->
-<div class = "row ml-0 mr-0 mt-4 adjusted bg-offwhite" id="gallery">
+<div class = "row ml-0 mr-0 mt-4 adjusted bg-offwhite cream" id="gallery">
   <div class = "col-12 text-center">
-    <h1>Some pictures of our events</h1>
+    <h1 class = "cursive">Just a taste</h1>
     <p>To see more Nino's Tacos feel free to follow us on Facebook or Instagram</p>
   </div>
   <div class = "row ml-0 mr-0">
@@ -310,7 +310,7 @@
             <li class="list-group-item shadow">
               <div class = "row ml-3 mr-3 pl-0 pr-0"> 
                 <div class = "col-12 text-center">
-                  <h1>Contact Us</h1>
+                  <h1 class = "cursive">Contact Us</h1>
                   <p>Do you have any questions or concerns? Want to leave us a review? Just fill out the form below and we'll  be sure to take a look!</p>
                 </div>
                 <div class = "col-4">
