--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
     </div>
     <div class="row justify-content-center ml-0 mr-0 cream mb-4">
         <div class="col-sm-4 text-center">
-          <div class="card mt-2">
+          <div class="card shadow mt-2">
             <div class="card-body">
               <h5 class="card-title">Competitive Pricing</h5>
               <p class="card-text text-left">Whether you're feeding 10 or 100, you can count on us to come through with delicious tacos at the right price. </p>
@@ -130,16 +130,16 @@
           </div>
         </div>
         <div class="col-sm-4 text-center ">
-          <div class="card mt-2">
+          <div class="card shadow mt-2">
             <div class="card-body">
               <h5 class="card-title">Locally Owned, Locally Grown</h5>
               <p class="card-text text-left">Local to the Dallas area, we are a small business that not only ebraces our roots but also gives back to our local community. </p>
               
             </div>
           </div>
-        </div>
+        </div> 
         <div class="col-sm-4 text-center">
-            <div class="card mt-2">
+            <div class="card shadow mt-2">
               <div class="card-body">
                 <h5 class="card-title">We've got the best tacos in town!</h5>
                 <p class="card-text text-left">Hundreds of clients have had the pleasure of enjoying our tacos. Don't feel left out, book us today!</p>
@@ -320,11 +320,11 @@
                 </div>
                 <div class= "col-4">
                   <h4>Email</h4>
-                  <p>Ninos@ninostacos.com</p>
+                  <p>Events@ninostacos.com</p>
                 </div>
                 <div class ="col-4">
                   <h4>Call</h4>
-                  <p>(214) 554-7824</p>
+                  <p>(214) 405-0534</p>
                 </div>
               </div>
             </li>
@@ -370,9 +370,9 @@
         </p>
       </div>
       <div class = "col-12 text-center">
-        <a href="#" class="fa fa-facebook"></a>
+        <a href="https://www.facebook.com/quieroninostacos" class="fa fa-facebook" style = "text-decoration: none;"></a>
         
-        <a href="#" class="fa fa-instagram"></a>
+        <a href="https://www.instagram.com/quieroninostacos/" class="fa fa-instagram" style = "text-decoration: none;"></a>
       </div>
       <div class = "col-12 text=center mt-4">
         <p class = "text-center"><small id ="copyright">@Copyright Nino's Tacos 2022. All rights reserved.</small></p>
