--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
             <li class="nav-item">
               <a class="nav-link text-white" href="#aboutus">About</a>
             </li>
-            <li class="nav-item">
+            <!-- <li class="nav-item">
               <a class="nav-link text-white" href="/menu.HTML">Menu</a>
-            </li>
+            </li> -->
             <li class="nav-item">
               <a class="nav-link text-white" href="#gallery">Gallery</a>
             </li>
@@ -119,7 +119,7 @@
           <!-- <p>These below are the super super specific reasons you should hire us.</p>    -->
         </div>
     </div>
-    <div class="row justify-content-center ml-0 mr-0 cream mb-4">
+    <div class="row justify-content-center ml-0 mr-0 cream mb-0">
         <div class="col-sm-4 text-center">
           <div class="card shadow mt-2">
             <div class="card-body">
@@ -199,7 +199,7 @@
       </div> -->
 
       <!-- -----------------------------------Book an Event--------------------------------------------------->
-        <div class="row ml-0 mr-0 mt-4 adjusted" id="event">
+        <div class="row ml-0 mr-0 mt-0 adjusted" id="event">
           <div class ="col-12">
             <div class = "card shadow">
               <form id="myForm">
