made border radius of jumbotron to 0 to make more square

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     <!-- Jumbotron with background image -->
    
   
-    <div class="jumbotron pl-0 pr-0 pt-0 pb-0 mb-0 ml-0 mr-0" style="height: 100vh; background-image: url(images/stack3.WEBP); background-size: cover;">
+    <div class="jumbotron pl-0 pr-0 pt-0 pb-0 mb-0 ml-0 mr-0" style="height: 100vh; background-image: url(images/stack3.WEBP); background-size: cover; border-radius: 0;">
       
         <div class = "row align-items-center" style = "height: 100vh;">
           <div class = "col-12 text-center mb-0 pb-0">
