--- a/index.html
+++ b/index.html
@@ -91,13 +91,13 @@
       </div>
 
       
-   
+      <br id="aboutus"/>
       
     <!---------------------- Picture along with about us ----------------------->
 
 
 
-    <div class ="row justify-content-center ml-0 mr-0 mt-0 pt-4 pb-4 cream adjusted" id="aboutus" >
+    <div class ="row justify-content-center ml-0 mr-0 mt-4 pt-4 pb-4 cream adjusted"  >
         <div class ="col-sm-12 col-md-6 pl-0 pr-0">  
           <img src="images/couplepic2.WEBP" class="d-block w-100" style="height:20rem" alt="...">
         </div>
@@ -361,6 +361,7 @@
         </form>
       </form>
   </div>
+  <br/>
   <!--------------------------------------Footer  ----------------------------------------------->
     <div class = "row mt-4 pt-4  ml-0 mr-0 text-white bg-black">
       <div class = "col-12 text-center">
