--- a/index.html
+++ b/index.html
@@ -65,11 +65,11 @@
       
         <div class = "row align-items-center" style = "height: 100vh;">
           <div class = "col-12 text-center mb-0 pb-0">
-            <h1 class = "text-white cursive font-large animated fadeInDown">Nino's Tacos Catering</h1>
+            <h1 class = "text-white font-large animated fadeInDown">Nino's Tacos Catering</h1>
             <p class="text-white font-medium animated fadeInDown">Authentic mexican tacos & street food catering.
-              bringing the taqueria to you.</p>
+              Bringing the taqueria to you.</p>
               <br>
-              <p class="text-white font-small animated fadeInDown">Est. 2021</p>
+              <p class="text-white font-small animated fadeInDown">est. 2021</p>
               <br>
               <a href ="/menu.HTML">
               <button type="button" class="btn gold-bg btn-md rounded-pill mt-4 mr-3 animated fadeInUp">Our Delicious Menu</button>
@@ -102,8 +102,8 @@
           <img src="images/couplepic2.WEBP" class="d-block w-100" style="height:20rem" alt="...">
         </div>
         <div class = "col-sm-12 col-md-6 align-self-center">
-            <h2 class = "mt-3 cursive text-center">A little about us</h2>
-            <p class = "text-left"> We are a family and Latinx-owned business bringing homecooked taquizas to celebrate the biggest moments, whether it be a birthday, a wedding, or just a good kick-back. <br>We specialize in serving street-style tacos with recipes influenced by our Mexican roots. When we cater an event, our hope is that our clients see and feel the love we pour into our recipes for everything we cook; frijoles charros, tacos de pastor and bistec, quesadillas, rice, and our freshly-made aguas frescas.<br> We strive for our clients to feel that we know just how special their events are, and hope that they feel satisfied knowing that our setup will be up to their standards and even Instagram-worthy! We guarantee to our clients that their guests will be impressed!</p>
+            <h2 class = "mt-3 text-center">A little about us</h2>
+            <p class = "text-center"> We are a family and Latinx-owned business bringing homecooked taquizas to celebrate the biggest moments, whether it be a birthday, a wedding, or just a good kick-back. <br>We specialize in serving street-style tacos with recipes influenced by our Mexican roots. When we cater an event, our hope is that our clients see and feel the love we pour into our recipes for everything we cook; frijoles charros, tacos de pastor and bistec, quesadillas, rice, and our freshly-made aguas frescas.<br> We strive for our clients to feel that we know just how special their events are, and hope that they feel satisfied knowing that our setup will be up to their standards and even Instagram-worthy! We guarantee to our clients that their guests will be impressed!</p>
         </div>
 
     </div>
@@ -111,7 +111,7 @@
     <!---------------- Why choose our resteraunt along with 3 cards ------------------->
     <div class = "row pt-4 justify-content-center ml-0 mr-0 cream">
         <div class = "col text-center pl-0 pr-0">
-            <h2 class="cursive">Why choose us? </h2>
+            <h2 class="">Why choose us? </h2>
         </div>   
     </div>
     <div class = "row justify-content-center ml-0 mr-0 pb-0 cream">
@@ -206,7 +206,7 @@
               <div class = "card-body">
                 <div class = "row ml-0 mr-0">
                   <div class="col-12 text-center">
-                    <h1 class = "cursive"> Book an Event</h1>
+                    <h1 class = ""> Book an Event</h1>
                     <p>Whether you're looking to book us for your next event or just looking to price check, go ahead and fill out the form below. We will contact you within a business day.</p>
                   </div>
                   <div class = "col-lg-4 col-sm-12 mt-3">
@@ -265,7 +265,7 @@
 <!-- -----------------------------------------Some photos of our events --------------------------------->
 <div class = "row ml-0 mr-0 mt-4 adjusted bg-offwhite cream" id="gallery">
   <div class = "col-12 text-center">
-    <h1 class = "cursive">Just a taste</h1>
+    <h1 class = "">Just a taste</h1>
     <p>To see more Nino's Tacos feel free to follow us on Facebook or Instagram</p>
   </div>
   <div class = "row ml-0 mr-0">
@@ -310,7 +310,7 @@
             <li class="list-group-item shadow">
               <div class = "row ml-3 mr-3 pl-0 pr-0"> 
                 <div class = "col-12 text-center">
-                  <h1 class = "cursive">Contact Us</h1>
+                  <h1 class = "">Contact Us</h1>
                   <p>Do you have any questions or concerns? Want to leave us a review? Just fill out the form below and we'll  be sure to take a look!</p>
                 </div>
                 <div class = "col-4">
