--- a/index.html
+++ b/index.html
@@ -68,9 +68,9 @@
     <!-- Jumbotron with background image -->
    
   
-    <div class="jumbotron pl-0 pr-0 pt-0 pb-0 mb-0 ml-0 mr-0" style="height: 100vh; background-image: url(images/stack3.WEBP); background-size: cover; border-radius: 0;">
+    <div class="jumbotron pl-0 pr-0 pt-0 pb-0 mb-0 ml-0 mr-0 adustedHeight" style="background-image: url(images/stack3.WEBP); background-size: cover; border-radius: 0;">
       
-        <div class = "row align-items-center" style = "height: 100vh;">
+        <div class = "row align-items-center adjustedHeight" style = "">
           <div class = "col-12 text-center mb-0 pb-0">
             <h1 class = "text-white animated fadeInDown pt-3" style="font-size:5em">Nino's Tacos Catering</h1>
             <p class="text-white animated fadeInDown">Authentic mexican tacos & street food catering.
