ade change on new computer

--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
             <span class="navbar-toggler-icon"></span>
           </button>
         </a>
-        <!--  -->
-
+        <!--  made change on new computer -->
+        
 
 
         <!--  -->
