--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
         <!--  -->
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
-            <li class="nav-item active">
+            <!-- <li class="nav-item active">
               <a class="nav-link text-white" href="#">Home </a>
-            </li>
+            </li> -->
             <li class="nav-item">
               <a class="nav-link text-white" href="#aboutus">About</a>
             </li>
@@ -156,10 +156,10 @@
 
     <div class ="row justify-content-center ml-0 mr-0 mt-4 pt-4 pb-4 adjusted" >
         <div class ="col-sm-12 col-md-4 pl-0 pr-0">  
-          <img src="images/couplepic2.WEBP" class="d-block w-100 rounded" style="height:20rem" alt="...">
+          <img src="images/couplepic2.WEBP" class="d-block w-100 rounded border-gold" style="height:20rem" alt="...">
         </div>
         <div class = "col-sm-12 col-md-8 align-self-center">
-            <h2 class = "mt-3 text-center">A little about us</h2>
+            <h1 class = "mt-3 text-center cursive">A little about us</h1>
             <p class = "text-left"> Nino's Tacos is a family and Latinx-owned business bringing homecooked taquizas to celebrate your biggest moments, whether it be a birthday, a wedding, or just a good kick-back.
               We specialize in serving street-style tacos with recipes influenced by our Mexican roots. When we cater an event, our hope and goal is that our clients see and feel the love we pour into our recipes for everything we cook: frijoles charros, tacos de pastor and bistec, quesadillas, rice, and our crowd-favorite, freshly-made aguas frescas.
               We know just how special our clients' events are, and hope that they feel satisfied knowing that our setup will be up to their standards, and even Instagram-worthy! We guarantee to our clients that their guests will be impressed! </p>
@@ -170,7 +170,7 @@
     <!---------------- Why choose our resteraunt along with 3 cards ------------------->
     <div class = "row pt-4 justify-content-center ml-0 mr-0">
         <div class = "col text-center pl-0 pr-0">
-            <h2 class="">Why choose us? </h2>
+            <h1 class="cursive">Why choose us? </h1>
         </div>   
     </div>
     
@@ -236,7 +236,7 @@
               <div class = "card-body">
                 <div class = "row ml-0 mr-0">
                   <div class="col-12 text-center">
-                    <h1 class = ""> Book an Event</h1>
+                    <h1 class = "cursive"> Book an Event</h1>
                     <p>Whether you're looking to book us for your next event or just looking to price check, go ahead and fill out the form below. We will contact you within a business day.</p>
                   </div>
                   <div class = "col-lg-4 col-sm-12 mt-3">
@@ -295,7 +295,7 @@
 <!-- -----------------------------------------Some photos of our events --------------------------------->
 <div class = "row ml-0 mr-0 mt-4 adjusted bg-offwhite" id="gallery">
   <div class = "col-12 text-center">
-    <h1 class = "">Just a taste</h1>
+    <h1 class = "cursive">Just a taste</h1>
     <p>To see more Nino's Tacos feel free to follow us on Facebook or Instagram</p>
   </div>
   <div class = "row ml-0 mr-0">
@@ -461,7 +461,7 @@
             <li class="list-group-item shadow">
               <div class = "row ml-3 mr-3 pl-0 pr-0"> 
                 <div class = "col-12 text-center">
-                  <h1 class = "">Contact Us</h1>
+                  <h1 class = "cursive">Contact Us</h1>
                   <p>Do you have any questions or concerns? Want to leave us a review? Just fill out the form below and we'll  be sure to take a look!</p>
                 </div>
                 <div class = " col-sm-12 col-md-4">
