removed border around about us picture

--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
 
     <div class ="row justify-content-center ml-0 mr-0 mt-4 pt-4 pb-4 adjusted" >
         <div class ="col-sm-12 col-md-4 pl-0 pr-0">  
-          <img src="images/couplepic2.WEBP" class="d-block w-100 rounded border-gold" style="height:20rem" alt="...">
+          <img src="images/couplepic2.WEBP" class="d-block w-100 rounded" style="height:20rem" alt="...">
         </div>
         <div class = "col-sm-12 col-md-8 align-self-center">
             <h1 class = "mt-3 text-center cursive">A little about us</h1>
