changed menu to another page

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
               <br>
               <p class="text-white animated fadeInDown">est. 2021</p>
               <br>
-              <a data-toggle="modal" data-target="#menumodal" >
+              <a href="/menu.html" target = "_blank">
               <button type="button" style="margin-bottom:2rem" class="btn gold-bg btn-md rounded-pill mt-4 mr-3 animated fadeInUp belgrano">Our Delicious Menu</button>
               </a>
 
@@ -98,7 +98,7 @@
    
     
     <!-- Modal -->
-    <div class="modal fade" id="menumodal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <!-- <div class="modal fade" id="menumodal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
       <div class="modal-dialog" role="document">
         <div class="modal-content">
           <div class="modal-header">
@@ -106,7 +106,7 @@
           </div>
         </div>
       </div>
-    </div>
+    </div> -->
              
             <a href="#event" style="width:100vw">
               <button type="button" style="margin-bottom:2rem"  class="btn gold-bg btn-md rounded-pill mt-4 animated fadeInUp belgrano">Book an event!</button>
