--- a/menu.html
+++ b/menu.html
@@ -14,7 +14,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Festive&family=Yellowtail&display=swap" rel="stylesheet">
 
 
-    <div class="text-center">
+    <div class="text-center center">
         <image src="/images/menu.PNG"></image>
     </div>
     
