centered menu image

--- a/menu.html
+++ b/menu.html
@@ -14,8 +14,8 @@
 <link href="https://fonts.googleapis.com/css2?family=Festive&family=Yellowtail&display=swap" rel="stylesheet">
 
 
-    <div class="text-center">
-        <image src="/images/menu.PNG"></image>
+    <div class="text-center" >
+        <image src="/images/menu.PNG" style="width:100vh"></image>
     </div>
     
    
