refactored to remove spinning cards instead added parallax image with static cards. added instagram.

--- a/menu.html
+++ b/menu.html
@@ -15,7 +15,7 @@
 
 
     <div class="text-center" >
-        <image src="/images/menu.PNG" style="width:100vh"></image>
+        <img src="/images/menu.PNG" style="width:100vh">
     </div>
     
    
