fixed type and added a comma for better reading

--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
             <img class="card-img-top" src="images/dallas.WEBP" style="height:20rem" alt="Card image cap">
           <div class="card-body">
             <h5 class="card-title">Locally Owned, Locally Grown</h5>
-            <p class="card-text">Local to the Dallas area, we are a small business that not only ebraces our roots but also gives back to our local community. </p>
+            <p class="card-text">Local to the Dallas area, we are a small business that not only embraces our roots, but also gives back to our local community. </p>
           </div>
 
           </div>
