--- a/index.html
+++ b/index.html
@@ -176,11 +176,11 @@
       <div class = "col-sm-12">
         <div class="row ml-0 mr-0 mb-0 pb-0">
           <div class = "col-sm-12 text-center pl-0 pr-0 mt-5" >
-            <h1 class="belgrano text-white">Why choose us? </h1>
+            <h1 class="belgrano text-white mt-5">Why choose us? </h1>
           </div> 
         </div>
       </div>
-      <div class = "col-sm-12 ml-0 mr-0 pl-0 pr-0 center">
+      <div class = "col-sm-12 ml-0 mr-0 pl-0 pr-0">
         <div class = "row text-center pt-0 mt-0">
           <div class="col-xs-12 col-md-4 center" >
           <div class="card mt-4" style="width:80%; min-width:290px; height:180px;">
