capitalized M in Mexican on footer

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Belgrano&display=swap" rel="stylesheet">
 
 
-<!-- added from new desktop -->
+
 
 
     <!-- Add icon library -->
@@ -388,8 +388,8 @@
         <img src="images/logo.JPG" style="width:80%"/>
       </div>
       <div class = "col-sm-6 text-center my-auto">
-        <div
-          <p style="font-size:1rem">Our mission is to provide our clients with exceptional service while serving up delicious mexican cuisine. For more Nino's Tacos follow us below.</p>
+        <div>
+          <p style="font-size:1rem">Our mission is to provide our clients with exceptional service while serving up delicious Mexican cuisine. For more Nino's Tacos follow us below.</p>
               
           <div class="text-center" style="margin-top:1.5rem">
             <a href="https://www.facebook.com/quieroninostacos" class="fa fa-facebook" style = "text-decoration: none; width:20%"></a>
