updated menu per client request

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
               <br>
               <p class="text-white animated fadeInDown">est. 2021</p>
               <br>
-              <a href="/menu.html" target = "_blank">
+              <a href="/files/menu.PDF" target = "_blank">
               <button type="button" style="margin-bottom:2rem" class="btn gold-bg btn-md rounded-pill mt-4 mr-3 animated fadeInUp belgrano">Our Delicious Menu</button>
               </a>
 
